[gd_scene load_steps=6 format=3 uid="uid://bnyvc1xr5iqjp"]

[ext_resource type="Script" uid="uid://dcadb5n38bhvt" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="AudioStream" uid="uid://7m2nobdvbg4m" path="res://audio/Button_Click.ogg" id="2_con2f"]
[ext_resource type="FontFile" uid="uid://cn3h7t21ovc1g" path="res://fonts/alagard.ttf" id="2_vjb58"]
[ext_resource type="AudioStream" uid="uid://bosjp1065j8k4" path="res://audio/Button_Hover.ogg" id="4_mhnvy"]

[sub_resource type="Theme" id="Theme_con2f"]
default_font = ExtResource("2_vjb58")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqeox")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 37.0
offset_top = -33.0
offset_right = 79.0
offset_bottom = 33.0
grow_vertical = 2
theme = SubResource("Theme_con2f")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Play_Click" type="AudioStreamPlayer2D" parent="MarginContainer/VBoxContainer/Play"]
stream = ExtResource("2_con2f")

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Quit_Click" type="AudioStreamPlayer2D" parent="MarginContainer/VBoxContainer/Quit"]
position = Vector2(0, -27)
stream = ExtResource("2_con2f")

[node name="Button_Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mhnvy")
volume_db = 5.0

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="finished" from="MarginContainer/VBoxContainer/Play/Play_Click" to="." method="_on_play_click_finished"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="MarginContainer/VBoxContainer/Quit/Quit_Click" to="." method="_on_quit_click_finished"]
